[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ibcp"
version = "0.0.3"
description = "Python Wrapper for Interactive Brokers API"
readme = "README.rst"
requires-python = ">=3.8"
license = "BSD-3-Clause"
authors = [
    { name = "Matt", email = "matt@example.com" },
]
keywords = ["interactive brokers", "api", "trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests",
    "urllib3",
]

[project.urls]
Homepage = "https://github.com/matthewmoorcroft/ibcp"
"Bug Tracker" = "https://github.com/matthewmoorcroft/ibcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ibcp"]
